// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Sizes iconEnd properly renders a button with an iconEnd 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.75rem;
  height: 1.5rem;
  padding: 0 0.75rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-6 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-6 i {
  width: 1.5rem;
  font-size: 0.6875rem;
}

.emotion-6 i:first-child {
  margin-left: -0.75rem;
}

.emotion-6 i:last-child {
  margin-right: -0.75rem;
}

.emotion-6:enabled:active {
  background-color: #061813;
}

.emotion-6:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-6:enabled:hover {
  background-color: #2f413c;
}

.emotion-6::-moz-focus-inner {
  border: 0;
}

.emotion-6:focus {
  border: 1px solid transparent;
}

.emotion-6:focus:hover {
  border: 1px solid transparent;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr 0fr;
  visibility: visible;
}

<button
  className="button--primary emotion-6 emotion-7"
  disabled={false}
  fontWeight="medium"
  size="small"
>
  <div
    className="emotion-4 emotion-5"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Button with Icon
    </p>
    <i
      className="ar ar-cr-logo emotion-2 emotion-3"
    />
  </div>
</button>
`;

exports[`<Button /> Sizes iconEnd properly renders a button with an iconEnd 2`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr 0fr;
  visibility: visible;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.8125rem;
  height: 2rem;
  padding: 0 1rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-6 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-6 i {
  width: 2rem;
  font-size: 0.75rem;
}

.emotion-6 i:first-child {
  margin-left: -1rem;
}

.emotion-6 i:last-child {
  margin-right: -1rem;
}

.emotion-6:enabled:active {
  background-color: #061813;
}

.emotion-6:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-6:enabled:hover {
  background-color: #2f413c;
}

.emotion-6::-moz-focus-inner {
  border: 0;
}

.emotion-6:focus {
  border: 1px solid transparent;
}

.emotion-6:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--primary emotion-6 emotion-7"
  disabled={false}
  fontWeight="medium"
  size="medium"
>
  <div
    className="emotion-4 emotion-5"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Button with Icon
    </p>
    <i
      className="ar ar-cr-logo emotion-2 emotion-3"
    />
  </div>
</button>
`;

exports[`<Button /> Sizes iconEnd properly renders a button with an iconEnd 3`] = `
.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-6 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-6 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-6 i:first-child {
  margin-left: -1.25rem;
}

.emotion-6 i:last-child {
  margin-right: -1.25rem;
}

.emotion-6:enabled:active {
  background-color: #061813;
}

.emotion-6:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-6:enabled:hover {
  background-color: #2f413c;
}

.emotion-6::-moz-focus-inner {
  border: 0;
}

.emotion-6:focus {
  border: 1px solid transparent;
}

.emotion-6:focus:hover {
  border: 1px solid transparent;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr 0fr;
  visibility: visible;
}

<button
  className="button--primary emotion-6 emotion-7"
  disabled={false}
  fontWeight="medium"
  size="large"
>
  <div
    className="emotion-4 emotion-5"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Button with Icon
    </p>
    <i
      className="ar ar-cr-logo emotion-2 emotion-3"
    />
  </div>
</button>
`;

exports[`<Button /> Sizes iconEnd properly renders a button with an iconEnd 4`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr 0fr;
  visibility: visible;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 3rem;
  padding: 0 1.5rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-6 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-6 i {
  width: 3rem;
  font-size: 1rem;
}

.emotion-6 i:first-child {
  margin-left: -1.5rem;
}

.emotion-6 i:last-child {
  margin-right: -1.5rem;
}

.emotion-6:enabled:active {
  background-color: #061813;
}

.emotion-6:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-6:enabled:hover {
  background-color: #2f413c;
}

.emotion-6::-moz-focus-inner {
  border: 0;
}

.emotion-6:focus {
  border: 1px solid transparent;
}

.emotion-6:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--primary emotion-6 emotion-7"
  disabled={false}
  fontWeight="medium"
  size="jumbo"
>
  <div
    className="emotion-4 emotion-5"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Button with Icon
    </p>
    <i
      className="ar ar-cr-logo emotion-2 emotion-3"
    />
  </div>
</button>
`;

exports[`<Button /> Sizes iconStart and iconEnd properly renders a button with an iconStart and an iconEdn 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.75rem;
  height: 1.5rem;
  padding: 0 0.75rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-8:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-8:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-8 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-8 i {
  width: 1.5rem;
  font-size: 0.6875rem;
}

.emotion-8 i:first-child {
  margin-left: -0.75rem;
}

.emotion-8 i:last-child {
  margin-right: -0.75rem;
}

.emotion-8:enabled:active {
  background-color: #061813;
}

.emotion-8:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-8:enabled:hover {
  background-color: #2f413c;
}

.emotion-8::-moz-focus-inner {
  border: 0;
}

.emotion-8:focus {
  border: 1px solid transparent;
}

.emotion-8:focus:hover {
  border: 1px solid transparent;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 0fr 1fr 0fr;
  visibility: visible;
}

<button
  className="button--primary emotion-8 emotion-9"
  disabled={false}
  fontWeight="medium"
  size="small"
>
  <div
    className="emotion-6 emotion-7"
    display="inline-grid"
  >
    <i
      className="ar ar-cr-logo emotion-0 emotion-1"
    />
    <p
      className="emotion-2 emotion-3"
      color="inherit"
      fontSize="inherit"
    >
      Button with Icon
    </p>
    <i
      className="ar ar-download emotion-0 emotion-1"
    />
  </div>
</button>
`;

exports[`<Button /> Sizes iconStart and iconEnd properly renders a button with an iconStart and an iconEdn 2`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 0fr 1fr 0fr;
  visibility: visible;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.8125rem;
  height: 2rem;
  padding: 0 1rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-8:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-8:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-8 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-8 i {
  width: 2rem;
  font-size: 0.75rem;
}

.emotion-8 i:first-child {
  margin-left: -1rem;
}

.emotion-8 i:last-child {
  margin-right: -1rem;
}

.emotion-8:enabled:active {
  background-color: #061813;
}

.emotion-8:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-8:enabled:hover {
  background-color: #2f413c;
}

.emotion-8::-moz-focus-inner {
  border: 0;
}

.emotion-8:focus {
  border: 1px solid transparent;
}

.emotion-8:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--primary emotion-8 emotion-9"
  disabled={false}
  fontWeight="medium"
  size="medium"
>
  <div
    className="emotion-6 emotion-7"
    display="inline-grid"
  >
    <i
      className="ar ar-cr-logo emotion-0 emotion-1"
    />
    <p
      className="emotion-2 emotion-3"
      color="inherit"
      fontSize="inherit"
    >
      Button with Icon
    </p>
    <i
      className="ar ar-download emotion-0 emotion-1"
    />
  </div>
</button>
`;

exports[`<Button /> Sizes iconStart and iconEnd properly renders a button with an iconStart and an iconEdn 3`] = `
.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-8:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-8:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-8 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-8 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-8 i:first-child {
  margin-left: -1.25rem;
}

.emotion-8 i:last-child {
  margin-right: -1.25rem;
}

.emotion-8:enabled:active {
  background-color: #061813;
}

.emotion-8:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-8:enabled:hover {
  background-color: #2f413c;
}

.emotion-8::-moz-focus-inner {
  border: 0;
}

.emotion-8:focus {
  border: 1px solid transparent;
}

.emotion-8:focus:hover {
  border: 1px solid transparent;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 0fr 1fr 0fr;
  visibility: visible;
}

<button
  className="button--primary emotion-8 emotion-9"
  disabled={false}
  fontWeight="medium"
  size="large"
>
  <div
    className="emotion-6 emotion-7"
    display="inline-grid"
  >
    <i
      className="ar ar-cr-logo emotion-0 emotion-1"
    />
    <p
      className="emotion-2 emotion-3"
      color="inherit"
      fontSize="inherit"
    >
      Button with Icon
    </p>
    <i
      className="ar ar-download emotion-0 emotion-1"
    />
  </div>
</button>
`;

exports[`<Button /> Sizes iconStart and iconEnd properly renders a button with an iconStart and an iconEdn 4`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 0fr 1fr 0fr;
  visibility: visible;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 3rem;
  padding: 0 1.5rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-8:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-8:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-8 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-8 i {
  width: 3rem;
  font-size: 1rem;
}

.emotion-8 i:first-child {
  margin-left: -1.5rem;
}

.emotion-8 i:last-child {
  margin-right: -1.5rem;
}

.emotion-8:enabled:active {
  background-color: #061813;
}

.emotion-8:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-8:enabled:hover {
  background-color: #2f413c;
}

.emotion-8::-moz-focus-inner {
  border: 0;
}

.emotion-8:focus {
  border: 1px solid transparent;
}

.emotion-8:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--primary emotion-8 emotion-9"
  disabled={false}
  fontWeight="medium"
  size="jumbo"
>
  <div
    className="emotion-6 emotion-7"
    display="inline-grid"
  >
    <i
      className="ar ar-cr-logo emotion-0 emotion-1"
    />
    <p
      className="emotion-2 emotion-3"
      color="inherit"
      fontSize="inherit"
    >
      Button with Icon
    </p>
    <i
      className="ar ar-download emotion-0 emotion-1"
    />
  </div>
</button>
`;

exports[`<Button /> Sizes iconStart properly renders a button with an iconStart 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.75rem;
  height: 1.5rem;
  padding: 0 0.75rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-6 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-6 i {
  width: 1.5rem;
  font-size: 0.6875rem;
}

.emotion-6 i:first-child {
  margin-left: -0.75rem;
}

.emotion-6 i:last-child {
  margin-right: -0.75rem;
}

.emotion-6:enabled:active {
  background-color: #061813;
}

.emotion-6:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-6:enabled:hover {
  background-color: #2f413c;
}

.emotion-6::-moz-focus-inner {
  border: 0;
}

.emotion-6:focus {
  border: 1px solid transparent;
}

.emotion-6:focus:hover {
  border: 1px solid transparent;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 0fr 1fr;
  visibility: visible;
}

<button
  className="button--primary emotion-6 emotion-7"
  disabled={false}
  fontWeight="medium"
  size="small"
>
  <div
    className="emotion-4 emotion-5"
    display="inline-grid"
  >
    <i
      className="ar ar-cr-logo emotion-0 emotion-1"
    />
    <p
      className="emotion-2 emotion-3"
      color="inherit"
      fontSize="inherit"
    >
      Button with Icon
    </p>
  </div>
</button>
`;

exports[`<Button /> Sizes iconStart properly renders a button with an iconStart 2`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 0fr 1fr;
  visibility: visible;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.8125rem;
  height: 2rem;
  padding: 0 1rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-6 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-6 i {
  width: 2rem;
  font-size: 0.75rem;
}

.emotion-6 i:first-child {
  margin-left: -1rem;
}

.emotion-6 i:last-child {
  margin-right: -1rem;
}

.emotion-6:enabled:active {
  background-color: #061813;
}

.emotion-6:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-6:enabled:hover {
  background-color: #2f413c;
}

.emotion-6::-moz-focus-inner {
  border: 0;
}

.emotion-6:focus {
  border: 1px solid transparent;
}

.emotion-6:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--primary emotion-6 emotion-7"
  disabled={false}
  fontWeight="medium"
  size="medium"
>
  <div
    className="emotion-4 emotion-5"
    display="inline-grid"
  >
    <i
      className="ar ar-cr-logo emotion-0 emotion-1"
    />
    <p
      className="emotion-2 emotion-3"
      color="inherit"
      fontSize="inherit"
    >
      Button with Icon
    </p>
  </div>
</button>
`;

exports[`<Button /> Sizes iconStart properly renders a button with an iconStart 3`] = `
.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-6 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-6 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-6 i:first-child {
  margin-left: -1.25rem;
}

.emotion-6 i:last-child {
  margin-right: -1.25rem;
}

.emotion-6:enabled:active {
  background-color: #061813;
}

.emotion-6:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-6:enabled:hover {
  background-color: #2f413c;
}

.emotion-6::-moz-focus-inner {
  border: 0;
}

.emotion-6:focus {
  border: 1px solid transparent;
}

.emotion-6:focus:hover {
  border: 1px solid transparent;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 0fr 1fr;
  visibility: visible;
}

<button
  className="button--primary emotion-6 emotion-7"
  disabled={false}
  fontWeight="medium"
  size="large"
>
  <div
    className="emotion-4 emotion-5"
    display="inline-grid"
  >
    <i
      className="ar ar-cr-logo emotion-0 emotion-1"
    />
    <p
      className="emotion-2 emotion-3"
      color="inherit"
      fontSize="inherit"
    >
      Button with Icon
    </p>
  </div>
</button>
`;

exports[`<Button /> Sizes iconStart properly renders a button with an iconStart 4`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 0fr 1fr;
  visibility: visible;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 3rem;
  padding: 0 1.5rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-6 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-6 i {
  width: 3rem;
  font-size: 1rem;
}

.emotion-6 i:first-child {
  margin-left: -1.5rem;
}

.emotion-6 i:last-child {
  margin-right: -1.5rem;
}

.emotion-6:enabled:active {
  background-color: #061813;
}

.emotion-6:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-6:enabled:hover {
  background-color: #2f413c;
}

.emotion-6::-moz-focus-inner {
  border: 0;
}

.emotion-6:focus {
  border: 1px solid transparent;
}

.emotion-6:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--primary emotion-6 emotion-7"
  disabled={false}
  fontWeight="medium"
  size="jumbo"
>
  <div
    className="emotion-4 emotion-5"
    display="inline-grid"
  >
    <i
      className="ar ar-cr-logo emotion-0 emotion-1"
    />
    <p
      className="emotion-2 emotion-3"
      color="inherit"
      fontSize="inherit"
    >
      Button with Icon
    </p>
  </div>
</button>
`;

exports[`<Button /> Sizes properly renders a jumbo sized button 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: visible;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 3rem;
  padding: 0 1.5rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-4 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-4 i {
  width: 3rem;
  font-size: 1rem;
}

.emotion-4 i:first-child {
  margin-left: -1.5rem;
}

.emotion-4 i:last-child {
  margin-right: -1.5rem;
}

.emotion-4:enabled:active {
  background-color: #061813;
}

.emotion-4:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-4:enabled:hover {
  background-color: #2f413c;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4:focus {
  border: 1px solid transparent;
}

.emotion-4:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  fontWeight="medium"
  size="jumbo"
>
  <div
    className="emotion-2 emotion-3"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Button Label
    </p>
  </div>
</button>
`;

exports[`<Button /> Sizes properly renders a large sized button 1`] = `
.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-4 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-4 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-4 i:first-child {
  margin-left: -1.25rem;
}

.emotion-4 i:last-child {
  margin-right: -1.25rem;
}

.emotion-4:enabled:active {
  background-color: #061813;
}

.emotion-4:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-4:enabled:hover {
  background-color: #2f413c;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4:focus {
  border: 1px solid transparent;
}

.emotion-4:focus:hover {
  border: 1px solid transparent;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: visible;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  fontWeight="medium"
  size="large"
>
  <div
    className="emotion-2 emotion-3"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Button Label
    </p>
  </div>
</button>
`;

exports[`<Button /> Sizes properly renders a medium sized button 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: visible;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.8125rem;
  height: 2rem;
  padding: 0 1rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-4 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-4 i {
  width: 2rem;
  font-size: 0.75rem;
}

.emotion-4 i:first-child {
  margin-left: -1rem;
}

.emotion-4 i:last-child {
  margin-right: -1rem;
}

.emotion-4:enabled:active {
  background-color: #061813;
}

.emotion-4:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-4:enabled:hover {
  background-color: #2f413c;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4:focus {
  border: 1px solid transparent;
}

.emotion-4:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  fontWeight="medium"
  size="medium"
>
  <div
    className="emotion-2 emotion-3"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Button Label
    </p>
  </div>
</button>
`;

exports[`<Button /> Sizes properly renders a small sized button 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: visible;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.75rem;
  height: 1.5rem;
  padding: 0 0.75rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-4 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-4 i {
  width: 1.5rem;
  font-size: 0.6875rem;
}

.emotion-4 i:first-child {
  margin-left: -0.75rem;
}

.emotion-4 i:last-child {
  margin-right: -0.75rem;
}

.emotion-4:enabled:active {
  background-color: #061813;
}

.emotion-4:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-4:enabled:hover {
  background-color: #2f413c;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4:focus {
  border: 1px solid transparent;
}

.emotion-4:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  fontWeight="medium"
  size="small"
>
  <div
    className="emotion-2 emotion-3"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Button Label
    </p>
  </div>
</button>
`;

exports[`<Button /> Variants properly renders a disabled minimal button 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: visible;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #081D17;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-4 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-4 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-4 i:first-child {
  margin-left: -1.25rem;
}

.emotion-4 i:last-child {
  margin-right: -1.25rem;
}

.emotion-4:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-4:enabled:active {
  background-color: #F8F9F9;
  color: #061813;
}

.emotion-4:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-4:enabled:hover {
  background-color: #F8F9F9;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4:focus {
  border: 1px solid transparent;
}

.emotion-4:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--minimal emotion-4 emotion-5"
  disabled={true}
  fontWeight="medium"
  size="large"
>
  <div
    className="emotion-2 emotion-3"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Button Label
    </p>
  </div>
</button>
`;

exports[`<Button /> Variants properly renders a disabled primary button 1`] = `
.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-4 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-4 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-4 i:first-child {
  margin-left: -1.25rem;
}

.emotion-4 i:last-child {
  margin-right: -1.25rem;
}

.emotion-4:enabled:active {
  background-color: #061813;
}

.emotion-4:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-4:enabled:hover {
  background-color: #2f413c;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4:focus {
  border: 1px solid transparent;
}

.emotion-4:focus:hover {
  border: 1px solid transparent;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: visible;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={true}
  fontWeight="medium"
  size="large"
>
  <div
    className="emotion-2 emotion-3"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Button Label
    </p>
  </div>
</button>
`;

exports[`<Button /> Variants properly renders a disabled secondary button 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: visible;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: #FFFFFF;
  color: #081D17;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-4 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-4 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-4 i:first-child {
  margin-left: -1.25rem;
}

.emotion-4 i:last-child {
  margin-right: -1.25rem;
}

.emotion-4:enabled {
  border: 1px solid #E0E1E2;
}

.emotion-4:enabled:active {
  color: #061813;
  background-color: #F8F9F9;
}

.emotion-4:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-4:enabled:hover {
  border: 1px solid #2f413c;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4:focus {
  border: 1px solid transparent;
}

.emotion-4:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--secondary emotion-4 emotion-5"
  disabled={true}
  fontWeight="medium"
  size="large"
>
  <div
    className="emotion-2 emotion-3"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Button Label
    </p>
  </div>
</button>
`;

exports[`<Button /> Variants properly renders a minimal button 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: visible;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #081D17;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-4 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-4 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-4 i:first-child {
  margin-left: -1.25rem;
}

.emotion-4 i:last-child {
  margin-right: -1.25rem;
}

.emotion-4:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-4:enabled:active {
  background-color: #F8F9F9;
  color: #061813;
}

.emotion-4:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-4:enabled:hover {
  background-color: #F8F9F9;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4:focus {
  border: 1px solid transparent;
}

.emotion-4:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--minimal emotion-4 emotion-5"
  disabled={false}
  fontWeight="medium"
  size="large"
>
  <div
    className="emotion-2 emotion-3"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Button Label
    </p>
  </div>
</button>
`;

exports[`<Button /> Variants properly renders a primary button 1`] = `
.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-4 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-4 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-4 i:first-child {
  margin-left: -1.25rem;
}

.emotion-4 i:last-child {
  margin-right: -1.25rem;
}

.emotion-4:enabled:active {
  background-color: #061813;
}

.emotion-4:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-4:enabled:hover {
  background-color: #2f413c;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4:focus {
  border: 1px solid transparent;
}

.emotion-4:focus:hover {
  border: 1px solid transparent;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: visible;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  fontWeight="medium"
  size="large"
>
  <div
    className="emotion-2 emotion-3"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Button Label
    </p>
  </div>
</button>
`;

exports[`<Button /> Variants properly renders a secondary button 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: visible;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: #FFFFFF;
  color: #081D17;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-4 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-4 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-4 i:first-child {
  margin-left: -1.25rem;
}

.emotion-4 i:last-child {
  margin-right: -1.25rem;
}

.emotion-4:enabled {
  border: 1px solid #E0E1E2;
}

.emotion-4:enabled:active {
  color: #061813;
  background-color: #F8F9F9;
}

.emotion-4:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-4:enabled:hover {
  border: 1px solid #2f413c;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4:focus {
  border: 1px solid transparent;
}

.emotion-4:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--secondary emotion-4 emotion-5"
  disabled={false}
  fontWeight="medium"
  size="large"
>
  <div
    className="emotion-2 emotion-3"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Button Label
    </p>
  </div>
</button>
`;

exports[`<Button /> fontSize properly renders a button with custom font preset size 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: visible;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-4 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-4 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-4 i:first-child {
  margin-left: -1.25rem;
}

.emotion-4 i:last-child {
  margin-right: -1.25rem;
}

.emotion-4:enabled:active {
  background-color: #061813;
}

.emotion-4:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-4:enabled:hover {
  background-color: #2f413c;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4:focus {
  border: 1px solid transparent;
}

.emotion-4:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  fontSize="size6"
  fontWeight="medium"
  size="large"
>
  <div
    className="emotion-2 emotion-3"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Size Button
    </p>
  </div>
</button>
`;

exports[`<Button /> fontSize properly renders a button with custom pixel font size 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: visible;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 100;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-4 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-4 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-4 i:first-child {
  margin-left: -1.25rem;
}

.emotion-4 i:last-child {
  margin-right: -1.25rem;
}

.emotion-4:enabled:active {
  background-color: #061813;
}

.emotion-4:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-4:enabled:hover {
  background-color: #2f413c;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4:focus {
  border: 1px solid transparent;
}

.emotion-4:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  fontSize="100"
  fontWeight="medium"
  size="large"
>
  <div
    className="emotion-2 emotion-3"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Size Button
    </p>
  </div>
</button>
`;

exports[`<Button /> fullWidth properly renders a fullWidth button 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: visible;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  width: 100%;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-4 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-4 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-4 i:first-child {
  margin-left: -1.25rem;
}

.emotion-4 i:last-child {
  margin-right: -1.25rem;
}

.emotion-4:enabled:active {
  background-color: #061813;
}

.emotion-4:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-4:enabled:hover {
  background-color: #2f413c;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4:focus {
  border: 1px solid transparent;
}

.emotion-4:focus:hover {
  border: 1px solid transparent;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  fontWeight="medium"
  size="large"
>
  <div
    className="emotion-2 emotion-3"
    display="inline-grid"
  >
    <p
      className="emotion-0 emotion-1"
      color="inherit"
      fontSize="inherit"
    >
      Full Width
    </p>
  </div>
</button>
`;
